--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="components/overview.css">
 	<title>Project Holiday</title>
 </head>
+
 <body>
 	<div class="settings">
 		<div class="style">
@@ -20,7 +22,7 @@
 			Apperance
 			<a href="" class="settings-link">Dark</a>
 		</div>
-	</div>	
+	</div>
 	<div class="main-title">
 		<img src="resources/holiday-logo.svg" alt="The logo" class="logo">
 	</div>
@@ -33,16 +35,18 @@
 			<a href="components/color.html" class="inactive">Color</a>
 			<a href="components/dialog.html" class="inactive">Dialog</a>
 			<a href="components/tab.html" class="inactive">Tab</a>
-			<a href="components/textfield.html" class="inactive">Textfield</a>			
-			<a href="components/toast.html" class="inactive">Toast</a>			
+			<a href="components/textfield.html" class="inactive">Textfield</a>
+			<a href="components/toast.html" class="inactive">Toast</a>
 		</div>
 	</nav>
 	<article class="overview-article">
 		<h1>Welecome!</h1>
-		<p><strong>Project Holiday</strong> is a modern style , cursor friendly and animation rich UI kit. <br>We are constantly updating this gallery. Please stay turned.</p>
+		<p><strong>Project Holiday</strong> is a modern style , cursor friendly and animation rich UI kit. <br>We are
+			constantly updating this gallery. Please stay turned.</p>
 		<div class="next">Up Next:</div>
-		<button>Color</button>	
+		<button>Color</button>
 	</article>
 
 </body>
+
 </html>
