--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</div>
 	</nav>
 	<article class="overview-article">
-		<h1>Welecome!</h1>
+		<h1>Welcome!</h1>
 		<p><strong>Project Holiday</strong> is a modern style , cursor friendly and animation rich UI kit. <br>We are
 			constantly updating this gallery. Please stay turned.</p>
 		<div class="next">Up Next:</div>
